# email-claude-extension

./: .gitignore  README.md  build.sh  manifest.json  pyproject.toml
.github/workflows/: build-installer.yml
server/: main.py
